--- a/python/katas/_modules/codewars/define_a_card_suit.html
+++ b/python/katas/_modules/codewars/define_a_card_suit.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.define_a_card_suit.define_suit">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">define_suit</span><span class="p">(</span><span class="n">card</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the suit of the given playing card. For example, given &quot;2C&quot;, &quot;clubs&quot; is</span>
-<span class="sd">    returned.</span>
+<span class="sd">    This function returns the suit of the given playing card. For example,</span>
+<span class="sd">    given &quot;2C&quot;, &quot;clubs&quot; is returned.</span>
 
-<span class="sd">    :param card: A string that is two or three characters long, the last character is the suit and</span>
-<span class="sd">        the other characters represent the card&#39;s value</span>
+<span class="sd">    :param card: A string that is two or three characters long, the last</span>
+<span class="sd">        character is the suit and the other characters represent the card&#39;s</span>
+<span class="sd">        value</span>
 <span class="sd">    :return: The suit name: &quot;clubs&quot;, &quot;spades&quot;, &quot;diamonds&quot;, or &quot;hearts&quot;</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">suit</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;C&quot;</span><span class="p">:</span> <span class="s2">&quot;clubs&quot;</span><span class="p">,</span> <span class="s2">&quot;S&quot;</span><span class="p">:</span> <span class="s2">&quot;spades&quot;</span><span class="p">,</span> <span class="s2">&quot;D&quot;</span><span class="p">:</span> <span class="s2">&quot;diamonds&quot;</span><span class="p">,</span> <span class="s2">&quot;H&quot;</span><span class="p">:</span> <span class="s2">&quot;hearts&quot;</span><span class="p">}</span>
