--- a/python/katas/_modules/codewars/pillars.html
+++ b/python/katas/_modules/codewars/pillars.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.pillars.pillars">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">pillars</span><span class="p">(</span><span class="n">count</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">dist</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">width</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the distance in centimeters between the first and last pillars (without</span>
-<span class="sd">    the widths of both pillars).</span>
+<span class="sd">    This function calculates the distance in centimeters between the first and</span>
+<span class="sd">    last pillars (without the widths of both pillars).</span>
 
 <span class="sd">    :param count: The number of pillars</span>
 <span class="sd">    :param dist: The distance between each pillar (in meters)</span>
