--- a/python/katas/_modules/codewars/polybius_square_cipher_encode.html
+++ b/python/katas/_modules/codewars/polybius_square_cipher_encode.html
@@ -259,8 +259,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.polybius_square_cipher_encode.polybius">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">polybius</span><span class="p">(</span><span class="n">text</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function encodes the given text using a polybius square cipher. Only uppercase letters are</span>
-<span class="sd">    encoded. All other characters except for spaces are ignored. The cipher encodes I and J as 24.</span>
+<span class="sd">    This function encodes the given text using a polybius square cipher. Only</span>
+<span class="sd">    uppercase letters are encoded. All other characters except for spaces are</span>
+<span class="sd">    ignored. The cipher encodes I and J as 24.</span>
 
 <span class="sd">    :param text: The input string to encode</span>
 <span class="sd">    :return: An encoded string</span>
