--- a/python/katas/_modules/codewars/populate_hash_with_array_keys_and_default_value.html
+++ b/python/katas/_modules/codewars/populate_hash_with_array_keys_and_default_value.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.populate_hash_with_array_keys_and_default_value.populate_dict">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">populate_dict</span><span class="p">(</span><span class="n">keys</span><span class="p">,</span> <span class="n">default</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function creates a dictionary using the given list of keys and assigns the given default</span>
-<span class="sd">    value to each key.</span>
+<span class="sd">    This function creates a dictionary using the given list of keys and assigns</span>
+<span class="sd">    the given default value to each key.</span>
 
 <span class="sd">    :param keys: The input list of keys</span>
 <span class="sd">    :param default: The default value to assign to each key</span>
