--- a/python/katas/_modules/codewars/pre_fizzbuzz_workout_number_1.html
+++ b/python/katas/_modules/codewars/pre_fizzbuzz_workout_number_1.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.pre_fizzbuzz_workout_number_1.pre_fizz">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">pre_fizz</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function generates a list of integers from 1 to :attr:`number`, inclusive.</span>
+<span class="sd">    This function generates a list of integers from 1 to :attr:`number`,</span>
+<span class="sd">    inclusive.</span>
 
 <span class="sd">    :param number: The last number in the range to include in the list</span>
 <span class="sd">    :return: A list of integers from 1 to :attr:`number`, inclusive</span>
