--- a/python/katas/_modules/codewars/previous_multiple_of_three.html
+++ b/python/katas/_modules/codewars/previous_multiple_of_three.html
@@ -257,12 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.previous_multiple_of_three.prev_mult_of_three">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">prev_mult_of_three</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function removes the last digit in :attr:`number` until the result is a multiple of three.</span>
-<span class="sd">    If all the digits are removed, then None is returned.</span>
+<span class="sd">    This function removes the last digit in :attr:`number` until the result is</span>
+<span class="sd">    a multiple of three. If all the digits are removed, then None is returned.</span>
 
 <span class="sd">    :param number: The input integer</span>
-<span class="sd">    :return: The digits that make up a number that is a multiple of three, or None if all the digits</span>
-<span class="sd">        are removed</span>
+<span class="sd">    :return: The digits that make up a number that is a multiple of three, or</span>
+<span class="sd">        None if all the digits are removed</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">string</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">number</span><span class="p">)</span>
     <span class="k">while</span> <span class="n">string</span><span class="p">:</span>
