--- a/python/katas/_modules/codewars/primes_in_numbers.html
+++ b/python/katas/_modules/codewars/primes_in_numbers.html
@@ -260,11 +260,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.primes_in_numbers.prime_factors">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">prime_factors</span><span class="p">(</span><span class="n">integer</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns all the prime factors of :attr:`integer` in the following form:</span>
-<span class="sd">    &quot;(p1**n1)(p2**n2)...(pk**nk)&quot;. The prime factors are displayed in ascending order. If</span>
-<span class="sd">    n1,n2,...nk is 1, only the prime factor will be displayed in the string.</span>
+<span class="sd">    This function returns all the prime factors of :attr:`integer` in the</span>
+<span class="sd">    following form: &quot;(p1**n1)(p2**n2)...(pk**nk)&quot;. The prime factors are</span>
+<span class="sd">    displayed in ascending order. If n1,n2,...nk is 1, only the prime factor</span>
+<span class="sd">    will be displayed in the string.</span>
 
-<span class="sd">    :param integer: The input integer for which to generate all the prime factors</span>
+<span class="sd">    :param integer: The input integer for which to generate all the prime</span>
+<span class="sd">        factors</span>
 <span class="sd">    :return: All the prime factors displayed as &quot;(p1**n1)(p2**n2)...(pk**nk)&quot;</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">factors</span> <span class="o">=</span> <span class="n">get_prime_factors</span><span class="p">(</span><span class="n">integer</span><span class="p">)</span>
