--- a/python/katas/_modules/codewars/retrieve_array_value_by_index_with_default.html
+++ b/python/katas/_modules/codewars/retrieve_array_value_by_index_with_default.html
@@ -257,13 +257,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.retrieve_array_value_by_index_with_default.solution">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">solution</span><span class="p">(</span><span class="n">items</span><span class="p">,</span> <span class="n">index</span><span class="p">,</span> <span class="n">default_value</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function retrieves a value at the given index in :attr:`items`. If :attr:`index` is out of</span>
-<span class="sd">    bounds, :attr:`default_value` is returned.</span>
+<span class="sd">    This function retrieves a value at the given index in :attr:`items`. If</span>
+<span class="sd">    :attr:`index` is out of bounds, :attr:`default_value` is returned.</span>
 
 <span class="sd">    :param items: The input list</span>
 <span class="sd">    :param index: The index in the list</span>
-<span class="sd">    :param default_value: The default value to return if :attr:`index` is out of bounds</span>
-<span class="sd">    :return: A value in the list if :attr:`index` is valid, or the default value</span>
+<span class="sd">    :param default_value: The default value to return if :attr:`index` is out</span>
+<span class="sd">        of bounds</span>
+<span class="sd">    :return: A value in the list if :attr:`index` is valid, or the default</span>
+<span class="sd">        value</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">try</span><span class="p">:</span>
         <span class="k">return</span> <span class="n">items</span><span class="p">[</span><span class="n">index</span><span class="p">]</span>
