--- a/python/katas/_modules/codewars/permutations.html
+++ b/python/katas/_modules/codewars/permutations.html
@@ -259,11 +259,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.permutations.permutations">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">permutations</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns all permutations of the given string, removing all duplicates if they are</span>
-<span class="sd">    present.</span>
+<span class="sd">    This function returns all permutations of the given string, removing all</span>
+<span class="sd">    duplicates if they are present.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: A list of all permutations of :attr:`string`, sorted in ascending order</span>
+<span class="sd">    :return: A list of all permutations of :attr:`string`, sorted in ascending</span>
+<span class="sd">        order</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">sorted</span><span class="p">({</span><span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">permutation</span><span class="p">)</span> <span class="k">for</span> <span class="n">permutation</span> <span class="ow">in</span> <span class="n">permute</span><span class="p">(</span><span class="n">string</span><span class="p">)})</span></div>
 
