--- a/python/katas/_modules/codewars/pete_the_baker.html
+++ b/python/katas/_modules/codewars/pete_the_baker.html
@@ -257,19 +257,18 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.pete_the_baker.cakes">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">cakes</span><span class="p">(</span><span class="n">recipe</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">],</span> <span class="n">available</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the number of cakes for a given recipe that Pete the baker can make</span>
-<span class="sd">    given the ingredients he has on hand.</span>
+<span class="sd">    This function calculates the number of cakes for a given recipe that Pete</span>
+<span class="sd">    the baker can make given the ingredients he has on hand.</span>
 
-<span class="sd">    :param recipe: A dictionary of the ingredients and amount for a particular cake</span>
+<span class="sd">    :param recipe: A dictionary of the ingredients and amount for a particular</span>
+<span class="sd">        cake</span>
 <span class="sd">    :param available: A dictionary of the ingredients and amount that Pete has</span>
 <span class="sd">    :return: The amount of cakes that Pete can make</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">for</span> <span class="n">ingredient</span><span class="p">,</span> <span class="n">count</span> <span class="ow">in</span> <span class="n">recipe</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
         <span class="k">if</span> <span class="n">ingredient</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">available</span> <span class="ow">or</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="n">available</span><span class="p">[</span><span class="n">ingredient</span><span class="p">]:</span>
             <span class="k">return</span> <span class="mi">0</span>
-    <span class="k">return</span> <span class="nb">min</span><span class="p">(</span>
-        <span class="n">available</span><span class="p">[</span><span class="n">ingredient</span><span class="p">]</span> <span class="o">//</span> <span class="n">recipe</span><span class="p">[</span><span class="n">ingredient</span><span class="p">]</span> <span class="k">for</span> <span class="n">ingredient</span> <span class="ow">in</span> <span class="n">recipe</span><span class="o">.</span><span class="n">keys</span><span class="p">()</span>
-    <span class="p">)</span></div>
+    <span class="k">return</span> <span class="nb">min</span><span class="p">(</span><span class="n">available</span><span class="p">[</span><span class="n">ingr</span><span class="p">]</span> <span class="o">//</span> <span class="n">recipe</span><span class="p">[</span><span class="n">ingr</span><span class="p">]</span> <span class="k">for</span> <span class="n">ingr</span> <span class="ow">in</span> <span class="n">recipe</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span></div>
 
 </pre></div>
         </article>
