--- a/python/katas/_modules/codewars/simple_string_expansion.html
+++ b/python/katas/_modules/codewars/simple_string_expansion.html
@@ -257,9 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.simple_string_expansion.solve">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">solve</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function expands a string given its shortened form. For example, given &quot;3(b(2(c)))&quot;, this</span>
-<span class="sd">    function will return &quot;bccbccbcc&quot;. Step by step, this function does the following: 3(b(2(c))) -&gt;</span>
-<span class="sd">    3(b(cc)) -&gt; 3(bcc) -&gt; bccbccbcc.</span>
+<span class="sd">    This function expands a string given its shortened form. For example, given</span>
+<span class="sd">    &quot;3(b(2(c)))&quot;, this function will return &quot;bccbccbcc&quot;. Step by step, this</span>
+<span class="sd">    function does the following: 3(b(2(c))) -&gt; 3(b(cc)) -&gt; 3(bcc) -&gt; bccbccbcc.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The expanded form of :attr:`string`</span>
@@ -279,12 +279,14 @@
             <span class="n">string</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">temp</span><span class="p">)</span>
             <span class="n">open_paren_idx</span> <span class="o">=</span> <span class="n">open_parens_indexes</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
             <span class="n">repeat</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">string</span><span class="p">[</span><span class="n">open_paren_idx</span> <span class="o">-</span> <span class="mi">1</span><span class="p">])</span>
+            <span class="c1"># fmt: off</span>
             <span class="k">for</span> <span class="n">current_char_idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">open_paren_idx</span> <span class="o">-</span> <span class="mi">1</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">):</span>
                 <span class="c1"># support for multi-digit repeats</span>
                 <span class="k">if</span> <span class="ow">not</span> <span class="n">string</span><span class="p">[</span><span class="n">current_char_idx</span><span class="p">]</span><span class="o">.</span><span class="n">isnumeric</span><span class="p">():</span>
-                    <span class="n">repeat</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">string</span><span class="p">[</span><span class="n">current_char_idx</span> <span class="o">+</span> <span class="mi">1</span> <span class="p">:</span> <span class="n">open_paren_idx</span><span class="p">])</span>
+                    <span class="n">repeat</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">string</span><span class="p">[</span><span class="n">current_char_idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">:</span> <span class="n">open_paren_idx</span><span class="p">])</span>
                     <span class="k">break</span>
-            <span class="n">characters</span> <span class="o">=</span> <span class="n">string</span><span class="p">[</span><span class="n">open_paren_idx</span> <span class="o">+</span> <span class="mi">1</span> <span class="p">:</span> <span class="n">idx</span><span class="p">]</span>
+            <span class="n">characters</span> <span class="o">=</span> <span class="n">string</span><span class="p">[</span><span class="n">open_paren_idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">:</span> <span class="n">idx</span><span class="p">]</span>
+            <span class="c1"># fmt: on</span>
             <span class="n">string_to_replace</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">repeat</span><span class="si">}</span><span class="s2">(</span><span class="si">{</span><span class="n">characters</span><span class="si">}</span><span class="s2">)&quot;</span>
             <span class="n">string</span> <span class="o">=</span> <span class="n">string</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="n">string_to_replace</span><span class="p">,</span> <span class="n">characters</span> <span class="o">*</span> <span class="n">repeat</span><span class="p">)</span>
             <span class="n">temp</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">string</span><span class="p">)</span>
