Added PCET certification.

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                                         <li>Oracle Certified Professional: Java SE 17 Developer</li>
                                         <li>PCAP - Certified Associate in Python Programming</li>
                                         <li>PCED - Certified Entry-Level Data Analyst with Python</li>
+                                        <li>PCET - Certified Entry-Level Tester with Python</li>
                                         <li>SC101: Open Data Formats YAML</li>
                                         <li>SC102: Source Control Management with Git</li>
                                         <li>SC107: Pattern Matching with Regular Expressions</li>
